tests/NormalTests/paczka1/fuzzy1/14537932.err
Error in line 5: 22BI9Jt S0 47,3
Error in line 2: cgkJtySb A400 39,0
Error in line 8: 22BI9Jt S0 209,5
Error in line 16: S221 S0 86,6
Error in line 21: S221 S0 372,4
Error in line 20: cgkJtySb S221 14,6
Error in line 29: iYbT3Qh S0 52,6
Error in line 30: XuNQth S0 47,7
Error in line 32: XuNQth S0 180,3
Error in line 33: iYbT3Qh S0 259,8
Error in line 25: cgkJtySb S615 9,1
Error in line 22: XuNQth S221 96,3
